tests/invalid/include_cycle.c
#include "cycle_a.h"
int main() { return 0; }
